corrected the nav text alignment

--- a/style.css
+++ b/style.css
@@ -623,6 +623,7 @@ nav {
   }
 
   .nav-links li {
+    text-align: center;
     margin-right: 0;
     color: white;
     margin-bottom: 0.5rem;
